# poll_app

./: .flake8  Makefile  README.md  pyproject.toml
.github/workflow/: makefile.yml
git-hooks/: pre-commit  pre-push
mysite/mysite/: settings.py
mysite/polls/: models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/static/polls/: style.css
