[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["chernyshevd <dmitrychernyshev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
